# electronic-module-for-the-dashboard-of-upbdrive-racing-car

./: README.md
Dashboard-module/: .gitignore  README.md
Dashboard-module/Documentation/: Dashboard-design-spec-sheet-v1.2.docx  _refs.txt  button_interrupt.txt  signals_out.txt
Dashboard-module/Hardware/Fabrication/: BOM.csv
Dashboard-module/Hardware/PCB/: Dashboard.kicad_pcb  Dashboard.kicad_pro  Dashboard.kicad_sch  esp32-integration.kicad_sch  fp-lib-table  sym-lib-table  ~Dashboard.kicad_sch.lck
Dashboard-module/Software/Firmware/: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
Dashboard-module/Software/Firmware/4dsystems-project/: 4dsys.4DGenie  4dsys.4XE  4dsys.cfg  4dsys.gci
Dashboard-module/Software/Firmware/4dsystems-project/4dsys.4DWork/: 4dsys.4DGenieS  4dsys.aux  4dsys.lst  4dsys.pjt  4dsysConst.inc
Dashboard-module/Software/Firmware/components/adc/: CMakeLists.txt  hybrid_selector_task.c
Dashboard-module/Software/Firmware/components/adc/inc/: hybrid_selector_task.h
Dashboard-module/Software/Firmware/components/can/: CMakeLists.txt  can_task.c
Dashboard-module/Software/Firmware/components/can/inc/: can_task.h
Dashboard-module/Software/Firmware/components/common/: CMakeLists.txt
Dashboard-module/Software/Firmware/components/common/inc/: common.h
Dashboard-module/Software/Firmware/components/gpio/: CMakeLists.txt
Dashboard-module/Software/Firmware/components/gpio/button/: buttons_task.c
Dashboard-module/Software/Firmware/components/gpio/button/inc/: buttons_task.h
Dashboard-module/Software/Firmware/components/gpio/led/: heartbeat_task.c  led_strip_encoder.c  led_task.c
Dashboard-module/Software/Firmware/components/gpio/led/inc/: heartbeat_task.h  led_strip_encoder.h  led_task.h
Dashboard-module/Software/Firmware/components/i2c/: CMakeLists.txt
Dashboard-module/Software/Firmware/components/i2c/accelerometer-mpu6050/: accelerometer_task.c
Dashboard-module/Software/Firmware/components/i2c/accelerometer-mpu6050/inc/: accelerometer_task.h
Dashboard-module/Software/Firmware/components/spi/: CMakeLists.txt
Dashboard-module/Software/Firmware/components/spi/sdcard/: sdcard_task.c
Dashboard-module/Software/Firmware/components/spi/sdcard/inc/: sdcard_task.h
Dashboard-module/Software/Firmware/components/timer/: CMakeLists.txt  timer_task.c
Dashboard-module/Software/Firmware/components/timer/inc/: timer_task.h
Dashboard-module/Software/Firmware/components/uart/: CMakeLists.txt
Dashboard-module/Software/Firmware/components/uart/lcd-4dsystems/: lcd_task.c
Dashboard-module/Software/Firmware/components/uart/lcd-4dsystems/inc/: lcd_task.h
Dashboard-module/Software/Firmware/components/visi-genie/: CMakeLists.txt  genieESP.cpp
Dashboard-module/Software/Firmware/components/visi-genie/inc/: genieESP.h
Dashboard-module/Software/Firmware/components/wifi-http/: CMakeLists.txt  file_server.c  wifi_task.c
Dashboard-module/Software/Firmware/components/wifi-http/html/: index.html  script.py
Dashboard-module/Software/Firmware/components/wifi-http/inc/: file_server.h  image.h  wifi_task.h
Dashboard-module/Software/Firmware/main/: CMakeLists.txt  main.c
Testing-module/: README.md
Testing-module/Hardware/Fabrication/: BOM.csv
Testing-module/Hardware/PCB/: ecu-emulator.kicad_pcb  ecu-emulator.kicad_prl  ecu-emulator.kicad_pro  ecu-emulator.kicad_sch  fp-lib-table  sym-lib-table
Testing-module/Hardware/PCB/ecu-emulator-gerber-latest/: ecu-emulator-B_Cu.gbl  ecu-emulator-B_Mask.gbs  ecu-emulator-B_Paste.gbp  ecu-emulator-B_Silkscreen.gbo  ecu-emulator-Edge_Cuts.gm1  ecu-emulator-F_Cu.gtl  ecu-emulator-F_Mask.gts  ecu-emulator-F_Paste.gtp  ecu-emulator-F_Silkscreen.gto  ecu-emulator-NPTH.drl  ecu-emulator-PTH.drl
Testing-module/Hardware/PCB/ecu-emulator-gerber-old/: ecu-emulator-B_Cu.gbr  ecu-emulator-B_Mask.gbr  ecu-emulator-B_Paste.gbr  ecu-emulator-B_Silkscreen.gbr  ecu-emulator-Edge_Cuts.gbr  ecu-emulator-F_Cu.gbr  ecu-emulator-F_Mask.gbr  ecu-emulator-F_Paste.gbr  ecu-emulator-F_Silkscreen.gbr  ecu-emulator-job.gbrjob
Testing-module/Software/Firmware/: .gitignore  Readme.md
Testing-module/Software/Firmware/components/adc/: adc.cpp
Testing-module/Software/Firmware/components/adc/inc/: adc.h
Testing-module/Software/Firmware/components/can/: can.cpp
Testing-module/Software/Firmware/components/can/inc/: can.h
Testing-module/Software/Firmware/components/common/inc/: common.h
Testing-module/Software/Firmware/components/heartbeat/: heartbeat.cpp
Testing-module/Software/Firmware/components/heartbeat/inc/: heartbeat.h
Testing-module/Software/Firmware/components/signal-generation/: random-signal.cpp  rpm.cpp  sawtooth-signal.cpp
Testing-module/Software/Firmware/components/signal-generation/inc/: random-signal.h  rpm.h  sawtooth-signal.h
Testing-module/Software/Firmware/main/: CMakeLists.txt  main.cpp
